# alphaprobe

./: .gitattributes  .gitignore  .gitmodules  .mise.toml  README.md  alphaprobe.code-workspace  go.work  go.work.sum  package.json  pyproject.toml
.devcontainer/: postCreateCommand.sh
.devcontainer/cuda/: Dockerfile  devcontainer.json  docker-compose.yaml
.devcontainer/default/: devcontainer.json  docker-compose.yaml  initializeCommand.sh
.devcontainer/default/dotfiles/.gemini/: GEMINI.md
.gemini/: settings.json
api/llmsr_worker/pb/: llmsr.proto
api/worker/pb/: observe.proto  propose.proto  worker.proto
apps/funsearch-orchestrator/: go.mod
apps/funsearch-orchestrator/internal/llmsr/: llmsr_test.go
apps/llmsr-worker/: README.md  pyproject.toml
apps/llmsr-worker/scripts/: protoc
apps/llmsr-worker/src/llmsr_worker/: __init__.py
apps/orchestrator/: README.md  go.mod  go.sum
apps/orchestrator/cmd/orchestrator/: main_test.go
apps/orchestrator/docs/: architecture.md  ask.md  fix.md  note.md  task.md
apps/orchestrator/internal/bilevel/: README.md  runner.go  (+4 more)
apps/worker/: README.md  pyproject.toml
apps/worker/src/worker/: __init__.py
apps/worker/src/worker/llmsr/: __init__.py  _llm.py  _prompt_template.py  _server.py  _servicer.py  test_propose.py
apps/worker/src/worker/pb/: __init__.py  observe_pb2.py  observe_pb2.pyi  observe_pb2_grpc.py  propose_pb2.py  propose_pb2.pyi  propose_pb2_grpc.py  worker_pb2.py  worker_pb2_grpc.py
apps/worker/src/worker/propose/: __init__.py  _handle.py  _types.py
docs/: architecture.md  development_environment.md  todo.md
playground/: shika.txt
scripts/: llmsrprotoc-go  llmsrprotoc-py  protogen
(+42 files in other folders)
